[package]
name = "lau-measure-agents"
version = "0.1.0"
edition = "2021"
description = "Measure theory for agents — rigorous foundation of integration and probability"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-measure-agents"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"

[dev-dependencies]
approx = "0.5"
